# MDEV-476: Cassandra: Server crashes in calculate_key_len on DELETE with ORDER BY - Fix typo in ha_cassandra::rnd_pos(). - in ::index_read_map(), do not assume that pk column is part of table->read_set.